--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <title>Courtney McGorrill</title>
+  </head>
+  <body>
+    <h1>Hello, World.</h1>
+    <p>Courtney McGorrill's personal webpage.</p>
+  </body>
+</html>
