--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Hello, World.</h1>
     <p>Courtney McGorrill's personal webpage.</p>
+    <p>I love Maine!</p>
   </body>
 </html>
