--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+  	<div class="sidebar">
+  		<ul class="nav nav-sidebar">
+            <li><a href="#">Courtney</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Work Experience</a></li>
+            <li><a href="#">Coursework</a></li>
+            <li><a href="#">Interests</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+  	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
