--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <![endif]-->
   </head>
   <body>
-  	<div class="sidebar">
-  		<ul class="nav nav-sidebar">
+  <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
             <li><a href="#">Courtney</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Work Experience</a></li>
@@ -26,7 +28,16 @@
             <li><a href="#">Interests</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-  	</div>
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          <h1 class="page-header">Title</h1>
+
+          <div class="row placeholders">
+            
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
