--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Courtney McGorrill</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <body>
   <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
+        <div class="col sidebar">
           <ul class="nav nav-sidebar">
             <li><a href="#">Courtney</a></li>
             <li><a href="#">Projects</a></li>
@@ -27,9 +27,9 @@
             <li><a href="#">Coursework</a></li>
             <li><a href="#">Interests</a></li>
             <li><a href="#">Contact</a></li>
-        </ul>
+          </ul>
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col main">
           <h1 class="page-header">Title</h1>
 
           <div class="row placeholders">
