--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../../favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <title>Courtney McG</title>
+    <title><icon href="images/monogram.png"></icon>Courtney McG</title>
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
         </div>
         <body>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">McG</h1><h1 class="page-header">orrill</h1>
+          <h1 class="page-header" align="right"><l>M<sup>c</sup>G</l><l>orrill</l></h1>
         </div>
       </div>
     </div>
