--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <title><icon href="images/monogram.png"></icon>Courtney McG</title>
-
+    <title>Courtney McG</title>
+    <link rel="shortcut icon" href="images/monogram.ico" />
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -42,7 +41,7 @@
         </div>
         <body>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header" align="right"><l>M<sup>c</sup>G</l><l>orrill</l></h1>
+          <h1 class="page-header" align="right"><l>Courtney M<sup>c</sup>G</l><l>orrill</l></h1>
         </div>
       </div>
     </div>
