--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <body>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" align="right">
-            <img href="images/monogram.ico" height="100px" width="100px" align="left">
+            <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
         </div>
