--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="/">Courtney</a></li>
+            <li><a href="/">Courtney</a></li>
             <li><a href="/projects.html">Projects</a></li>
             <li><a href="/courses.html">Coursework</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li class="active"><a href="/contact.html">Contact</a></li>
           </ul>
         </div>
         <body>
