--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,8 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="/">Courtney</a></li>
-            <li><a href="/projects.html">Projects</a></li>
+            <li><a href="/">Courtney</a></li>
+            <li class="active"><a href="/projects.html">Projects</a></li>
             <li><a href="/courses.html">Coursework</a></li>
             <li><a href="/contact.html">Contact</a></li>
           </ul>
