--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" align="right">
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
-            <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
+            <l id="first-name">Courtney M<sup>c</sup>G</l><l id="last-name">orrill</l>
           </h1>
         </div>
       </div>
