--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
+          <a class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+            <img class="media-object" src="images/courtney.jpg">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">Get to Know Me</h3>
+              <p>20 years old.</p>
+              <p>Originally from Maine. </p>
+              <p>3<sup>rd</sup> year Software Engineering student at Rochester Institute of Technology in New York. </p>
+              <p>Currently working as a College Intern with EMC at their office in Research Triangle Park, North Carolina. </p>
+              <p>Active member of Zeta Tau Alpha, Iota Psi chapter, and currently serving on the executive board as secretary.</p>
+              <p>Self proclaimed exception to arbitrary rules, with a passion for mixing arts with sciences and girly with techy.</p>
+              <p>Pizza enthusiast.</p>
+              <p>Coffee addict.</p>
+          </div>
         </div>
       </div>
     </div>
