--- a/index.html
+++ b/index.html
@@ -52,12 +52,24 @@
             <h3 class="media-heading">Get to Know Me</h3>
               <p>20 years old.</p>
               <p>Originally from Maine. </p>
-              <p>3<sup>rd</sup> year Software Engineering student at Rochester Institute of Technology in New York. </p>
-              <p>Currently working as a College Intern with EMC at their office in Research Triangle Park, North Carolina. </p>
+              <p>3<sup>rd</sup> year Software Engineering student at Rochester Institute of Technology in New York.</p>
+              <p>Currently working as a College Intern with EMC at their office in Research Triangle Park, North Carolina.</p>
               <p>Active member of Zeta Tau Alpha, Iota Psi chapter, and currently serving on the executive board as secretary.</p>
               <p>Self proclaimed exception to arbitrary rules, with a passion for mixing arts with sciences and girly with techy.</p>
+              <p>Soccer and skiing are fun, but frisbee is more popular with my friends.</p>
+              <p>Willing to fix your shattered iPhone screen.</p>
+              <p>Can teach you to shoot a bow and arrow.</p>
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
+              <p></p>
+              <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target=".bs-example-modal-lg">resume</a></p>
+          </div>
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <img src="images/resume.jpg">
+              </div>
+            </div>
           </div>
         </div>
       </div>
