--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
               <p></p>
-              <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target=".bs-example-modal-lg">resume</a></p>
+              <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target="#myModal">resume</a></p>
           </div>
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" top="30px">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <img src="images/resume.jpg">
