--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <p></p>
               <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target="#myModal">resume</a></p>
           </div>
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" top="30px">
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <img src="images/resume.jpg">
