--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
               <p></p>
-              <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target="#myModal">resume</a></p>
+              <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target="#myModal">resume</a>.</p>
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
