--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
           <a class="pull-left" style="margin-left: 50px; margin-right: 20px;">
-            <img class="media-object visible-desktop" src="images/courtney.jpg">
+            <img class="media-object visible-lg" src="images/courtney.jpg">
           </a>
           <div class="media-body">
             <h3 class="media-heading">Get to Know Me</h3>
