--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
           <a class="pull-left" style="margin-left: 50px; margin-right: 20px;">
             <img class="media-object visible-desktop" src="images/courtney.jpg">
           </a>
-          <div class="media-body">
+          <a class="pull-left" style="margin-left: 50px; margin-right: 20px; height: 300; width: 200;">
+            <img class="media-object visible-phone" src="images/courtney.jpg">
+          </a>
+          <div class="media-body visible-desktop visible-phone">
             <h3 class="media-heading">Get to Know Me</h3>
               <p>20 years old.</p>
               <p>Originally from Maine. </p>
