--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
               <p>Can teach you to shoot a bow and arrow.</p>
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
-              <p></p>
+              <p> </p>
               <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target="#myModal">resume</a>.</p>
+              <img class="hidden-desktop" src="images/courtney.jpg">
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
