--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <p>Coffee addict.</p>
               <p> </p>
               <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target="#myModal">resume</a>.</p>
-              <img class="hidden-desktop" src="images/courtney.jpg">
+              <img class="media-object hidden-desktop" src="images/courtney.jpg">
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
