--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
               <p> </p>
-              <p>To learn more about me professionally, take a look at my <link data-toggle="modal" data-target="#myModal">resume</link>.</p>
+              <p>To learn more about me professionally, take a look at my <a data-toggle="modal" data-target="#myModal">resume</a>.</p>
               <img class="media-object hidden-desktop" src="images/courtney.jpg">
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -71,7 +71,7 @@
                 <img src="images/resume.jpg">
               </div>
             </div>
-            <div class="modal-dialog modal-sm hidden-desktop">
+            <div class="modal-dialog modal-lg hidden-desktop">
               <div class="modal-content">
                 <img src="images/resume.jpg">
               </div>
