modal-mobile-test

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
-                <img src="images/resume.jpg">
+                <!-- <img src="images/resume.jpg"> -->
+                Modal Test
               </div>
             </div>
           </div>
