--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 Spring 2014 Resume
-                <img src="images/resume.jpg">
+                <img class="media-object visible-desktop" src="images/resume.jpg">
+                <img class="media-object hidden-desktop" src="images/resume.jpg" height="400px" width="309px">
               </div>
             </div>
           </div>
