modal-mobile-test-5

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
               <img class="media-object hidden-desktop" src="images/courtney.jpg">
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog ">
               <div class="modal-content">
                 Spring 2014 Resume
                 <!--<img class="media-object visible-desktop" src="images/resume.jpg"> -->
-                <img class="media-object src="images/resume.jpg" height="400px" width="309px">
+                <img class="media-object" src="images/resume.jpg" height="400px" width="309px">
               </div>
             </div>
           </div>
