--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <img class="media-object hidden-desktop" src="images/courtney.jpg">
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-sm">
+            <div class="modal-dialog modal-xs">
               <div class="modal-content">
                 Spring 2014 Resume
                 <!--<img class="media-object visible-desktop" src="images/resume.jpg"> -->
