--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                 <img class="media-object" src="images/resume.jpg" height="388px" width="300px">
               </div>
             </div>
+            <div class="modal-dialog modal-lg visible-desktop">
+              <div class="modal-content">
+                Spring 2014 Resume
+                <img class="media-object" src="images/resume.jpg">
+                
+              </div>
+            </div>
           </div>
         </div>
       </div>
