modal-mobile-test-24

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                 <img class="media-object" src="images/resume.jpg" height="388px" width="300px">
               </div>
             </div>
-
+            <div class="modal-dialog modal-lg visible-desktop">
+              <div class="modal-content">
+                <img class="media-object visible-desktop" src="images/resume.jpg">
+              </div>
+            </div>
           </div>
         </div>
       </div>
