--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
+                Spring 2014 Resume
                 <img class="media-object visible-desktop" src="images/resume.jpg">
                 <img class="media-object hidden-desktop" src="images/resume.jpg" height="388px" width="300px">
               </div>
