--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-              <div class="modal-content">
+              <div class="modal-content" float="none">
                 Spring 2014 Resume
                 <img class="media-object visible-desktop" src="images/resume.jpg">
                 <img class="media-object hidden-desktop" src="images/resume.jpg" height="388px" width="300px">
