modal-mobile-test-28

--- a/index.html
+++ b/index.html
@@ -62,15 +62,14 @@
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
               <p> </p>
-              <p>To learn more about me professionally, take a look at my <a href="/projects.html" data-toggle="modal" data-target="#myModal">resume</a>.</p>
+              <p>To learn more about me professionally, take a look at my <a class"visible-desktop" href="/images/resume.jpg" data-toggle="modal" data-target="#myModal">resume</a><a class"hidden-desktop" href="/images/resume.jpg">resume</a>.</p>
               <img class="media-object hidden-desktop" src="images/courtney.jpg">
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-lg">
               <div class="modal-content" float="none">
                 Spring 2014 Resume
                 <img class="media-object visible-desktop" src="images/resume.jpg">
-                <img class="media-object hidden-desktop" src="images/resume.jpg" height="388px" width="300px">
               </div>
             </div>
           </div>
