--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
               <p> </p>
-              <p>To learn more about me professionally, take a look at my <a class="hidden-phone" data-toggle="modal" data-target="#myModal" style="width: 50px">resume</a><a class="hidden-desktop" href="/images/resume.jpg" style="width: 50px">resume</a></p>
+              <p>To learn more about me professionally, take a look at my <a  href="/images/resume.pdf" style="width: 50px">resume</a></p>
               <img class="media-object hidden-desktop" src="images/courtney.jpg">
           </div>
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
