--- a/index.html
+++ b/index.html
@@ -62,16 +62,8 @@
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
               <p> </p>
-              <p>To learn more about me professionally, take a look at my <a  href="/images/resume.pdf" style="width: 50px">resume</a></p>
+              <p>To learn more about me professionally, take a look at my <a  href="/images/resume.pdf" style="width: 50px">resume</a>.</p>
               <img class="media-object hidden-desktop" src="images/courtney.jpg">
-          </div>
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
-              <div class="modal-content" float="none">
-                Spring 2014 Resume
-                <img class="media-object visible-desktop" src="images/resume.jpg">
-              </div>
-            </div>
           </div>
         </div>
       </div>
