--- a/courses.html
+++ b/courses.html
@@ -45,7 +45,7 @@
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
-          <h3>My course history and what I've learned from my classes is coming soon!</h3>
+          <h3 margin-left="70px">My course history and what I've learned from my classes is coming soon!</h3>
         </div>
       </div>
     </div>
