--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
-          <h3>Projects from both my classes and personal time will be up shortly!</h3>
+          <h3 margin-left="70px">Projects from both my classes and personal time will be up shortly!</h3>
         </div>
       </div>
     </div>
