--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
-          <h3 margin-left="70px">Full contact details will be up soon! In the meantime, I can be reached via email: cmm5215@rit.edu</h3>
+          <h3 style="margin-left: 150px;">Full contact details will be up soon! In the meantime, I can be reached via email: cmm5215@rit.edu</h3>
         </div>
       </div>
     </div>
