--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="/projects.html">Projects</a></li>
             <li><a href="/courses.html">Coursework</a></li>
             <li><a href="/contact.html">Contact</a></li>
+            <li><icon class="glyphicon glyphicon-linkedin"></icon></li>
           </ul>
         </div>
         <body>
