--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="/projects.html">Projects</a></li>
             <li><a href="/courses.html">Coursework</a></li>
             <li><a href="/contact.html">Contact</a></li>
-            <li><a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" style="vertical-align:middle" border="0"></a></li>
+            <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="40" height="30" style="vertical-align:middle" border="0"></a>
           </ul>
         </div>
         <body>
