--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             <li><a href="/projects.html">Projects</a></li>
             <li><a href="/courses.html">Coursework</a></li>
             <li><a href="/contact.html">Contact</a></li>
-            <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="40" height="30" style="vertical-align:middle" border="0"></a>
+            <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png" width="40" height="40" style="vertical-align:middle; margin: 5px;"></a>
+            <a href="https://plus.google.com/105974376606633906968"><img src="images/googleplus.png" width="40" height="40" style="vertical-align:middle; margin: 5px;"></a>
+            <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png" width="40" height="40" style="vertical-align:middle; margin: 5px;"></a>
+            <a href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png" width="40" height="40" style="vertical-align:middle; margin: 5px;"></a>
           </ul>
         </div>
         <body>
