contact page complete

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,16 @@
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
-          <h3 style="margin-left: 150px;">Full contact details will be up soon! In the meantime, I can be reached via email: cmm5215@rit.edu</h3>
+          <a class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+            <img class="media-object visible-desktop" src="images/gmail.png">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">cmm5215@rit.edu</h3>
+              <p>I run on east coast time and check my email frequently.</p>
+              <p>LinkedIn and Google+ account links are on the left there.</p>
+              <p>As are Twitter and Facebook for fun stuff.</p>
+              <img class="media-object hidden-desktop" src="images/gmail.png">
+          </div>
         </div>
       </div>
     </div>
