contact page removed, google plus replaced with gmail

--- a/courses.html
+++ b/courses.html
@@ -36,9 +36,9 @@
             <li><a href="/">Courtney</a></li>
             <li><a href="/projects.html">Projects</a></li>
             <li class="active"><a href="/courses.html">Coursework</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a>Contact</a></li>
             <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png" width="30" height="30" style="vertical-align:middle; margin-left: 12px;"></a>
-            <a href="https://plus.google.com/105974376606633906968"><img src="images/googleplus.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
+            <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
             <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
             <a href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
           </ul>
