contact page returned, just email

--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,13 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="/">Courtney</a></li>
+            <li><a href="/">Courtney</a></li>
             <li><a href="/projects.html">Projects</a></li>
             <li><a href="/courses.html">Coursework</a></li>
-            <li><a>Contact</a></li>
+            <li class="active"><a href="/contact.html">Contact</a></li>
             <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png" width="30" height="30" style="vertical-align:middle; margin-left: 12px;"></a>
-            <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>           <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
+            <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
+            <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
             <a href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
           </ul>
         </div>
@@ -46,27 +47,15 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" align="right">
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
-            <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
+            <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
           <a class="pull-left" style="margin-left: 50px; margin-right: 20px;">
-            <img class="media-object visible-desktop" src="images/courtney.jpg">
+            <img class="media-object visible-desktop" width="50px" height="50px" src="images/gmail.png">
           </a>
           <div class="media-body">
-            <h3 class="media-heading">Get to Know Me</h3>
-              <p>20 years old.</p>
-              <p>Originally from Maine. </p>
-              <p>3<sup>rd</sup> year Software Engineering student at Rochester Institute of Technology in New York.</p>
-              <p>Currently working as a College Intern with EMC at their office in Research Triangle Park, North Carolina.</p>
-              <p>Active member of Zeta Tau Alpha, Iota Psi chapter, and currently serving on the executive board as secretary.</p>
-              <p>Self proclaimed exception to arbitrary rules, with a passion for mixing arts with sciences and girly with techy.</p>
-              <p>Soccer and skiing are fun, but frisbee is more popular with my friends.</p>
-              <p>Willing to fix your shattered iPhone screen.</p>
-              <p>Can teach you to shoot a bow and arrow.</p>
-              <p>Pizza enthusiast.</p>
-              <p>Coffee addict.</p>
-              <p> </p>
-              <p>To learn more about me professionally, take a look at my <a  href="/images/resume.pdf" style="width: 50px">resume</a>.</p>
-              <img class="media-object hidden-desktop" src="images/courtney.jpg">
+            <h5 class="media-heading">cmm5215@rit.edu</h5>
+            <img class="media-object hidden-desktop" src="images/gmail.png">
+            <p>I run on east coast time and check my email frequently.</p>              
           </div>
         </div>
       </div>
