--- a/contact.html
+++ b/contact.html
@@ -49,14 +49,51 @@
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
-          <a class="pull-left" style="margin-left: 50px; margin-right: 20px;">
-            <img class="media-object visible-desktop" width="150px" height="150px" src="images/gmail.png">
+
+          <a href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+            <img class="media-object visible-desktop" width="100px" height="100px" src="images/linkedin.png">
           </a>
           <div class="media-body">
-            <h3 class="media-heading">cmm5215@rit.edu</h3>
-            <img class="media-object hidden-desktop" src="images/gmail.png">
+            <h3 class="media-heading">Connect with me.</h3>
+            <a href="http://www.linkedin.com/in/courtneymcgorrill">
+              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/linkedin.png">
+            </a>
+            <p>Connect with me on LinkedIn and get to know me better as a professional.</p>
+          </div>
+
+          <a href="mailto:cmm5215@rit.edu" target="_top" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+            <img class="media-object visible-desktop" width="100px" height="100px" src="images/gmail.png">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">Mail me.</h3>
+            <a href="mailto:cmm5215@rit.edu" target="_top">
+              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/gmail.png">
+            </a>
             <p>I run on east coast time and check my email frequently.</p>              
           </div>
+
+          <a href="https://twitter.com/court_mcgort" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+            <img class="media-object visible-desktop" width="100px" height="100px" src="images/twitter.png">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">Follow me.</h3>
+            <a href="https://twitter.com/court_mcgort">
+              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/twitter.png">
+            </a>
+            <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
+          </div>
+
+          <a href="https://facebook.com/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+            <img class="media-object visible-desktop" width="100px" height="100px" src="images/facebook.png">
+          </a>
+          <div class="media-body">
+            <h3 class="media-heading">Friend me.</h3>
+            <a href=href="https://facebook.com/courtneymcgorrill">
+              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/facebook.png">
+            </a>
+            <p>Still trying to kick the Facebook habit, but if you shoot me a message on here, I'm bound to see it within the hour.</p>
+          </div>
+
         </div>
       </div>
     </div>
