contact li tags

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
 
-          <a href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <li><a href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
             <img class="media-object visible-desktop" width="100px" height="100px" src="images/linkedin.png">
           </a>
           <div class="media-body">
@@ -59,9 +59,9 @@
               <img class="media-object hidden-desktop" width="100px" height="100px" src="images/linkedin.png">
             </a>
             <p>Connect with me on LinkedIn and get to know me better as a professional.</p>
-          </div>
+          </div></li>
 
-          <a href="mailto:cmm5215@rit.edu" target="_top" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <li><a href="mailto:cmm5215@rit.edu" target="_top" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
             <img class="media-object visible-desktop" width="100px" height="100px" src="images/gmail.png">
           </a>
           <div class="media-body">
@@ -70,9 +70,9 @@
               <img class="media-object hidden-desktop" width="100px" height="100px" src="images/gmail.png">
             </a>
             <p>I run on east coast time and check my email frequently.</p>              
-          </div>
+          </div></li>
 
-          <a href="https://twitter.com/court_mcgort" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <li><a href="https://twitter.com/court_mcgort" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
             <img class="media-object visible-desktop" width="100px" height="100px" src="images/twitter.png">
           </a>
           <div class="media-body">
@@ -81,9 +81,9 @@
               <img class="media-object hidden-desktop" width="100px" height="100px" src="images/twitter.png">
             </a>
             <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
-          </div>
+          </div></li>
 
-          <a href="https://facebook.com/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <li><a href="https://facebook.com/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
             <img class="media-object visible-desktop" width="100px" height="100px" src="images/facebook.png">
           </a>
           <div class="media-body">
@@ -92,7 +92,7 @@
               <img class="media-object hidden-desktop" width="100px" height="100px" src="images/facebook.png">
             </a>
             <p>Still trying to kick the Facebook habit, but if you shoot me a message on here, I'm bound to see it within the hour.</p>
-          </div>
+          </div></li>
 
         </div>
       </div>
