--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
           <a href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
             <img class="media-object visible-desktop" width="100px" height="100px" src="images/linkedin.png">
           </a>
-          <div class="media-body" margin-bottom="30px">
+          <div class="media-body" style="margin-bottom:30px;">
             <h3 class="media-heading">Connect with me.</h3>
             <a href="http://www.linkedin.com/in/courtneymcgorrill">
               <img class="media-object hidden-desktop" width="100px" height="100px" src="images/linkedin.png">
