--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
 
-          <a href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <a href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px; margin-bottom: 20px;">
             <img class="media-object visible-desktop" width="100px" height="100px" src="images/linkedin.png">
           </a>
           <div class="media-body" style="margin-bottom:30px;">
@@ -61,10 +61,10 @@
             <p>Connect with me on LinkedIn and get to know me better as a professional.</p>
           </div>
 
-          <a href="mailto:cmm5215@rit.edu" target="_top" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <a href="mailto:cmm5215@rit.edu" target="_top" class="pull-left" style="margin-left: 150px; margin-right: 20px; margin-bottom: 20px;">
             <img class="media-object visible-desktop" width="100px" height="100px" src="images/gmail.png">
           </a>
-          <div class="media-body">
+          <div class="media-body" style="margin-bottom: 30px;">
             <h3 class="media-heading">Mail me.</h3>
             <a href="mailto:cmm5215@rit.edu" target="_top">
               <img class="media-object hidden-desktop" width="100px" height="100px" src="images/gmail.png">
@@ -72,10 +72,10 @@
             <p>I run on east coast time and check my email frequently.</p>              
           </div>
 
-          <a href="https://twitter.com/court_mcgort" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <a href="https://twitter.com/court_mcgort" class="pull-left" style="margin-left: 150px; margin-right: 20px; margin-bottom:20px;">
             <img class="media-object visible-desktop" width="100px" height="100px" src="images/twitter.png">
           </a>
-          <div class="media-body">
+          <div class="media-body" style="margin-bottom: 30px;">
             <h3 class="media-heading">Follow me.</h3>
             <a href="https://twitter.com/court_mcgort">
               <img class="media-object hidden-desktop" width="100px" height="100px" src="images/twitter.png">
@@ -83,7 +83,7 @@
             <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
           </div>
 
-          <a href="https://facebook.com/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <a href="https://facebook.com/courtneymcgorrill" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
             <img class="media-object visible-desktop" width="100s]px" height="100px" src="images/facebook.png">
           </a>
           <div class="media-body">
