--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <p>20 years old.</p>
               <p>Originally from Maine. </p>
               <p>3<sup>rd</sup> year Software Engineering student at Rochester Institute of Technology in New York.</p>
-              <p>Currently working as a College Intern with EMC at their office in Research Triangle Park, North Carolina.</p>
+              <p>In the summer of 2014, worked as a College Intern with EMC at their office in Research Triangle Park, North Carolina.</p>
               <p>Active member of Zeta Tau Alpha, Iota Psi chapter, and currently serving on the executive board as secretary.</p>
               <p>Self proclaimed exception to arbitrary rules, with a passion for mixing arts with sciences and girly with techy.</p>
               <p>Soccer and skiing are fun, but frisbee is more popular with my friends.</p>
