--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <p>Pizza enthusiast.</p>
               <p>Coffee addict.</p>
               <p> </p>
-              <p>To learn more about me professionally, take a look at my <a  href="/images/resume.pdf" style="width: 50px">resume</a>.</p>
+              <p>To learn more about me professionally, take a look at my <a  href="https://resume.creddle.io/resume/4tqptjm6x7" style="width: 50px">resume</a>.</p>
               <img class="media-object hidden-desktop" src="images/courtney.jpg">
           </div>
         </div>
