--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
-          <div style="margin-left: 150px;"></div>
+          <div style="margin-left: 150px;">
               <h3 >Mud Tug</h3>
               <p>Every fall, my sorority co-hosted Mud Tug, a 10 v. 10 tug-of-war tournament over Mud Pits. Since I have joined ZTA, we average ~1600 participants each year. <br>
               For two years I was tasked with helping run the three tournament brackets, mens, womens, and co-ed. The first year I simply did what I was told. The second year, I took matters into my own hands<br>
