--- a/projects.html
+++ b/projects.html
@@ -57,9 +57,9 @@
               I have now taken my bracket strategy for the event, and begun to turn it into an online application that will mingle with online registration. Online reigstration is also an entirely new feature for Mud Tug <br>
               It's my goal to make signing up for Mud Tug so easy, you'd be crazy not to do it, and push us over the 2000 mark for total competitors. <br>
               Below you will see images of the progress of the site. As new features are completed, I will be adding more images. <br>
-              <img src="images/shot1">
-              <img src="images/shot2">
-              <img src="images/shot3">
+              <img src="images/shot1.png" style="height:200px">
+              <img src="images/shot2.png" style="height:200px">
+              <img src="images/shot3.png" style="height:200px">
               </p>
           </div>
         </div>
