--- a/projects.html
+++ b/projects.html
@@ -58,9 +58,9 @@
               It's my goal to make signing up for Mud Tug so easy, you'd be crazy not to do it, and push us over the 2000 mark for total competitors. <br>
               Below you will see images of the progress of the site. As new features are completed, I will be adding more images. <br>
               </p>
-              <img src="images/shot1.jpg" style="height:200px"> <br>
-              <img src="images/shot2.jpg" style="height:200px"> <br>
-              <img src="images/shot3.jpg" style="height:200px"> <br>
+              <img src="images/shot1.jpg" style="height:200px"></img>
+              <img src="images/shot2.jpg" style="height:200px"></img> <br>
+              <img src="images/shot3.jpg" style="height:200px"></img>
 
           </div>
         </div>
