--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,7 @@
           </h1>
           <div style="margin-left: 150px;">
               <h3 >Mud Tug</h3>
+              <a href="http://mudtug.rit.edu" target="_blank">mudtug.rit.edu</a>
               <p>Every fall, my sorority co-hosted Mud Tug, a 10 v. 10 tug-of-war tournament over Mud Pits. Since I have joined ZTA, we average ~1600 participants each year. <br>
               For two years I was tasked with helping run the three tournament brackets, mens, womens, and co-ed. The first year I simply did what I was told. The second year, I took matters into my own hands<br>
               With my strategy for running the brackets, we finished hours ahead of schedule, and had to brainstorm ideas of how to kill time and keep people entertained. <br>
