--- a/hamper.html
+++ b/hamper.html
@@ -29,29 +29,30 @@
   <style id="holderjs-style" type="text/css"></style></head>
 
 
-    <div class="container-fluid">
+      <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li><a href="/">Courtney</a></li>
-            <li class="active"><a href="/projects.html">Projects</a></li>
-            <!--<li><a href="/courses.html">Coursework</a></li>-->
+            <li><a href="/mudtug.html">Mud Tug</a></li>
+            <li class="active"><a href="/hamper.html">Hamper</a></li>
             <li><a href="/contact.html">Contact</a></li>
-            <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png" width="30" height="30" style="vertical-align:middle; margin-left: 12px;"></a>
-            <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
-            <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
-            <a href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
           </ul>
         </div>
         <body>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" align="right">
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
-            <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
+            <a class="social" href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png"></a>
+            <a class="social" href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png"></a>           
+            <a class="social" href="https://twitter.com/court_mcgort"><img src="images/twitter.png"></a>
+            <a class="social" href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png"></a>
+          
+            <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
           <div style="margin-left: 150px;">
-              <h3 >Mud Tug</h3>
-              <a href="http://mudtug.rit.edu" target="_blank">mudtug.rit.edu</a>
+              <h3 >Hamper</h3>
+              <a href="http://devpost.com/software/hamper" target="_blank">Hamper on DevPost</a>
               <p>Every fall, my sorority co-hosted Mud Tug, a 10 v. 10 tug-of-war tournament over Mud Pits. Since I have joined ZTA, we average ~1600 participants each year. <br>
               For two years I was tasked with helping run the three tournament brackets, mens, womens, and co-ed. The first year I simply did what I was told. The second year, I took matters into my own hands<br>
               With my strategy for running the brackets, we finished hours ahead of schedule, and had to brainstorm ideas of how to kill time and keep people entertained. <br>
