--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="dist/cssdashboard.css" rel="stylesheet">
+    <link href="dist/css/dashboard.css" rel="stylesheet">
     <link href="dist/css/header.css" rel="stylesheet">
+    <link href="dist/css/index.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
