--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
-          <a class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <a class="image pull-left" style="margin-left: 50px; margin-right: 20px;">
             <img class="media-object visible-desktop" src="images/mudtugme.jpg">
           </a>
           <div class="media-body">
